backend/server.log
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/root/Documents/Codex/2026-06-09/github-com-inzexg-coder-fide-claculator/venv/lib/python3.12/site-packages/uvicorn/__main__.py", line 4, in <module>
    uvicorn.main()
  File "/root/Documents/Codex/2026-06-09/github-com-inzexg-coder-fide-claculator/venv/lib/python3.12/site-packages/click/core.py", line 1524, in __call__
    return self.main(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/Documents/Codex/2026-06-09/github-com-inzexg-coder-fide-claculator/venv/lib/python3.12/site-packages/click/core.py", line 1445, in main
    rv = self.invoke(ctx)
         ^^^^^^^^^^^^^^^^
  File "/root/Documents/Codex/2026-06-09/github-com-inzexg-coder-fide-claculator/venv/lib/python3.12/site-packages/click/core.py", line 1308, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/Documents/Codex/2026-06-09/github-com-inzexg-coder-fide-claculator/venv/lib/python3.12/site-packages/click/core.py", line 877, in invoke
    return callback(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/Documents/Codex/2026-06-09/github-com-inzexg-coder-fide-claculator/venv/lib/python3.12/site-packages/uvicorn/main.py", line 441, in main
    run(
  File "/root/Documents/Codex/2026-06-09/github-com-inzexg-coder-fide-claculator/venv/lib/python3.12/site-packages/uvicorn/main.py", line 609, in run
    config.load_app()
  File "/root/Documents/Codex/2026-06-09/github-com-inzexg-coder-fide-claculator/venv/lib/python3.12/site-packages/uvicorn/config.py", line 415, in load_app
    return import_from_string(self.app)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/Documents/Codex/2026-06-09/github-com-inzexg-coder-fide-claculator/venv/lib/python3.12/site-packages/uvicorn/importer.py", line 19, in import_from_string
    module = importlib.import_module(module_str)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 991, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/root/Documents/Codex/2026-06-09/github-com-inzexg-coder-fide-claculator/backend/main.py", line 130
    await task
SyntaxError: expected 'except' or 'finally' block
